variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: value unary_! is not a member of Int
if (!nbPas == 0) {
    ^